--- a/core/package.json
+++ b/core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@titem/core",
-  "version": "1.0.0",
+  "name": "@elonehoo/concise-byte",
+  "version": "0.0.0",
   "type": "module",
   "description": "Convert bytes to a human readable",
   "author": "Elone Hoo <huchengyea@163.com>",
@@ -9,8 +9,7 @@
   "scripts": {
     "build": "rimraf dist && unbuild",
     "stub": "unbuild --stub",
-    "prepublishOnly": "pnpm run build",
-    "test": "vitest"
+    "prepublishOnly": "pnpm run build"
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
