--- a/package.json
+++ b/package.json
@@ -1,30 +1,57 @@
 {
-  "name": "@elonehoo/monorepo",
-  "private": "true",
-  "description": "Convert bytes to a human readable",
-  "author": "Elone Hoo <huchengyea@163.com>",
+  "name": "@elonehoo/concise-byte",
   "type": "module",
-  "license": "MIT",
   "version": "0.0.1",
+  "description": "Convert bytes to a human readable",
+  "license": "MIT",
+  "author": "Elone Hoo <huchengyea@163.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/elonehoo/concise-byte.git"
+  },
+  "funding": "https://github.com/sponsors/elonehoo",
+  "homepage": "https://github.com/elonehoo/concise-byte#readme",
+  "bugs": {
+    "url": "https://github.com/elonehoo/concise-byte/issues"
+  },
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
+    },
+    "./*": "./*"
+  },
+  "files": [
+    "dist",
+    "*.d.ts"
+  ],
   "scripts": {
-    "prepare": "pnpm -r run stub",
+    "build": "rimraf dist && unbuild",
+    "stub": "unbuild --stub",
+    "prepublishOnly": "pnpm run build",
     "release": "bumpp package.json core/package.json --commit --push --tag && pnpm -r publish --access public",
-    "typeCheck": "tsc --noEmit",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "pnpm -C test run test",
-    "coverage": "pnpm -C test run coverage",
-    "reporter": "pnpm -C test run reporter"
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
+    "reporter": "vitest run --reporter json"
   },
   "devDependencies": {
     "@elonehoo/eslint-config": "2.0.0",
-    "@types/node": "18.7.16",
-    "bumpp": "8.2.1",
-    "eslint": "8.23.0",
-    "pnpm": "7.11.0",
-    "rimraf": "3.0.2",
-    "typescript": "4.8.3",
-    "unbuild": "0.8.10",
-    "vite": "3.1.0"
+    "@types/node": "18.15.11",
+    "bumpp": "9.1.0",
+    "c8": "^7.13.0",
+    "eslint": "8.38.0",
+    "pnpm": "8.2.0",
+    "rimraf": "5.0.0",
+    "typescript": "5.0.4",
+    "unbuild": "1.2.1",
+    "vite": "4.2.1",
+    "vitest": "^0.30.1"
   }
 }
